fix indicator alignment

--- a/stylesheets/commons/Standings.scss
+++ b/stylesheets/commons/Standings.scss
@@ -70,6 +70,7 @@
 	padding: 0.125rem 0.5rem;
 	gap: 0.125rem;
 	font-weight: bold;
+	align-items: center;
 
 	&.movement-up {
 		color: var( --clr-semantic-positive-30 );
